# lookfor

./: Cargo.toml  README.md
benches/: search.rs
src/: lib.rs  main.rs  types.rs
tests/: search_test.rs
tests/common/: mod.rs
