[package]
name = "lookfor"
description = "Cross-Platform file finder"
version = "1.3.0"
edition = "2024"
rust-version = "1.85"
homepage = "https://github.com/DarkCeptor44/lookfor"
repository = "https://github.com/DarkCeptor44/lookfor"
readme = "README.md"
authors = ["DarkCeptor44"]
license = "GPL-3.0-or-later"
keywords = ["alternative", "find", "search", "pattern"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "^1"
async-walkdir = "^2"
clap = { version = "^4.5", features = ["derive"] }
colored = "^3"
futures = "^0.3"
walkdir = "^2"
rayon = "^1"
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }

[profile.dev]
codegen-units = 16
debug = true
incremental = true

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

# for slow SBCs
[profile.fast]
inherits = "release"
lto = false
