[package]
name = "lookfor"
description = "Cross-Platform file finder"
version = "2.0.0"
edition = "2024"
rust-version = "1.85"
homepage = "https://github.com/DarkCeptor44/lookfor"
repository = "https://github.com/DarkCeptor44/lookfor"
readme = "README.md"
authors = ["DarkCeptor44"]
license = "GPL-3.0-or-later"
keywords = ["alternative", "find", "search", "pattern"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
async-walkdir = "2.1.0"
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
futures = "0.3.32"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
