[package]
name = "lookfor"
description = "Cross-Platform file finder"
version = "2.0.0"
edition = "2024"
rust-version = "1.85"
homepage = "https://github.com/DarkCeptor44/lookfor"
repository = "https://github.com/DarkCeptor44/lookfor"
readme = "README.md"
authors = ["DarkCeptor44"]
license = "GPL-3.0-or-later"
keywords = ["alternative", "find", "search", "pattern"]
categories = ["command-line-utilities"]

[dependencies]
# lib
colored = "3.1.1"
crossbeam = "0.8.4"
globset = { version = "0.4.18", default-features = false }
rayon = "1.11.0"

# cli
anyhow = { version = "1.0.102", optional = true }
clap = { version = "4.6.0", features = ["derive"], optional = true }
num_cpus = { version = "1.17.0", optional = true }

[dev-dependencies]
anyhow = "1.0.102"
divan = "0.1.21"
tempfile = "3.27.0"

[features]
default = []
cli = ["dep:anyhow", "dep:clap", "dep:num_cpus"]

[[bin]]
name = "lookfor"
path = 'src/main.rs'
required-features = ["cli"]

[[bench]]
name = "search"
harness = false
